# wait-travis

./: .gitignore  .travis.yml  README.rst  setup.cfg  tox.ini
src/wait_travis/: api.py  cli.py  githubutils.py  matchers.py
src/wait_travis/tests/: test_matchers.py  test_show.py  test_wait.py
